GS-12344: Fixed width of text ad to align icon.

--- a/src/webapp/res/css/gs2010_styles.css
+++ b/src/webapp/res/css/gs2010_styles.css
@@ -1941,7 +1941,7 @@ body.cobranded #pageGS {
 }
 
 .integratedTextAds.adLogo .gsAdText{
-    width: 297px;
+    width: 290px;
 }
 
 .integratedTextAds.adLogo.adList .gsAdText{
